--- a/index.Rmd
+++ b/index.Rmd
@@ -30,18 +30,18 @@ pubs <- map_df(pubs, ~gsub("\\.$", "", .x))
 
 
 ```{r}
-PDF <- TRUE # Set to TRUE when rendering to PDF via pagedown::chrome_print()
+PDF <- FALSE # Set to TRUE when rendering to PDF via pagedown::chrome_print()
 if(PDF) {
   header <- '
   View online
-  <a href="https://datalorax.github.io/anderson-cv/" class="icon-block">
+  <a href="https://jim-wright90.github.io/wright_cv/" class="icon-block">
       <i class="fas fafooter fa-globe"></i>
   </a>
   '
 } else {
   header <- '
   Download PDF
-  <a href="https://github.com/datalorax/anderson-cv/raw/master/anderson-cv.pdf" class="icon-block">
+  <a href="https://jim-wright90.github.io/wright_cv/raw/master/wright_cv.pdf" class="icon-block">
       <i class="fas fafooter fa-download"></i>
   </a>
   '
