--- a/content/summary.Rmd
+++ b/content/summary.Rmd
@@ -2,5 +2,5 @@
 ## About Me {.box}
 I am primarily interested in multidisciplinary concussion management and the development of empirically driven return-to-learn guidelines for students recovering from concussion.
 
-The style and format of this CV developed by [Daniel Anderson, Ph.D.](https://github.com/datalorax) 
+<!-- The style and format of this CV developed by [Daniel Anderson, Ph.D.](https://github.com/datalorax)  -->
 ```
