--- a/index.Rmd
+++ b/index.Rmd
@@ -154,7 +154,7 @@ cv_entries %>%
   kable()
 ```
 
-A specific example of the work I complete for Marzano Research is the development of a data dashboard for Kamehameha Schools in the State of Hawaii. The dashboard is accessible [here](https://marzanoresearch.shinyapps.io/dashboard_version3/). 
+A specific example of the work I complete for Marzano Research is the development of a data dashboard for Kamehameha Schools in the State of Hawaii. The dashboard is accessible [here](https://marzanoresearch.shinyapps.io/ks_version4/?_ga=2.111201984.530676107.1666295282-750961707.1634592294). 
 
 ## Graduate Student Research Experience 
 
