--- a/index.Rmd
+++ b/index.Rmd
@@ -7,6 +7,7 @@ output:
     css: [anderson-cv.css]
     number_sections: false
 links-to-footnotes: false
+
 # knit: pagedown::chrome_print
 ---
 
@@ -133,7 +134,7 @@ cv_entries %>%
          ) %>% 
   mutate(year = str_c(year_begin, " --- ", year_end)) %>% 
   select(year, what) %>% 
-  kable()
+  kable(longtable = FALSE)
 ```
 
 ## Career History {.history .nohead}
@@ -151,7 +152,7 @@ cv_entries %>%
                       " --- ", 
                       ifelse(is.na(year_end), "", year_end))) %>% 
   select(year, what, additional_info) %>% 
-  kable()
+  kable(longtable = FALSE)
 ```
 
 
@@ -173,7 +174,8 @@ cv_entries %>%
                       " --- ", 
                       ifelse(is.na(year_end), "", year_end))) %>% 
   select(year, what, role, additional_info) %>% 
-  kable(col.names = NULL)
+  kable(longtable = FALSE,
+        col.names = NULL)
 
 
 # cv_entries %>% 
@@ -205,7 +207,8 @@ cv_entries %>%
                       " --- ", 
                       ifelse(is.na(year_end), "", year_end))) %>% 
   select(year, what, additional_info) %>% 
-  kable(col.names = NULL)
+  kable(longtable = FALSE,
+        col.names = NULL)
 ```
 
 I consulted with HCAMP to complete my capstone project in order to obtain the data science specialization from the University of Oregon. Our collaboration focused on retrospectively analyzing ImPACT test scores and PCSS severity ratings. Data products I produced for HCAMP are accessible [here](https://jim-wright90.shinyapps.io/HCAMP_shiny/?_ga=2.184615983.768699848.1629757508-733798040.1613499824) and [here](https://jim-wright90.github.io/hcamp_clusters/).
@@ -225,7 +228,8 @@ cv_entries %>%
                       " --- ", 
                       ifelse(is.na(year_end), "", year_end))) %>% 
   select(year, what) %>% 
-  kable(col.names = NULL)
+  kable(longtable = FALSE,
+        col.names = NULL)
 ```
 
 ## Graduate Student Service 
@@ -243,7 +247,8 @@ cv_entries %>%
                       " --- ", 
                       ifelse(is.na(year_end), "", year_end))) %>% 
   select(year, what, additional_info) %>% 
-  kable(col.names = NULL)
+  kable(longtable = FALSE,
+        col.names = NULL)
 ```
 
 ## Professional Affiliations 
@@ -261,7 +266,8 @@ cv_entries %>%
                       " --- ", 
                       ifelse(is.na(year_end), "", year_end))) %>% 
   select(year, what) %>% 
-  kable(col.names = NULL)
+  kable(longtable = FALSE,
+        col.names = NULL)
 ```
 
 ## Certification and Licensure 
@@ -279,7 +285,8 @@ cv_entries %>%
                       " --- ", 
                       ifelse(is.na(year_end), "", year_end))) %>% 
   select(year, what) %>% 
-  kable(col.names = NULL)
+  kable(longtable = FALSE,
+        col.names = NULL)
 ```
 
 ## Professional Training 
@@ -297,7 +304,8 @@ cv_entries %>%
                       " --- ", 
                       ifelse(is.na(year_end), "", year_end))) %>% 
   select(year, what) %>% 
-  kable(col.names = NULL)
+  kable(longtable = FALSE,
+        col.names = NULL)
 ```
 
 ## Programming Skills
@@ -315,7 +323,8 @@ cv_entries %>%
                       " --- ", 
                       ifelse(is.na(year_end), "", year_end))) %>% 
   select(year, what) %>% 
-  kable(col.names = NULL)
+  kable(longtable = FALSE,
+        col.names = NULL)
 ```
 
 
@@ -353,7 +362,8 @@ courses %>%
                          fa_git, "<sp></sp>", fa_web),
          order = paste0(order, ".")) %>%
   select(order, course) %>%
-  kable(col.names = NULL)
+  kable(longtable = FALSE,
+        col.names = NULL)
 ```
 
 # Scholarship
@@ -504,6 +514,7 @@ pubs_tbl <- pubs_tbl %>%
 
 ```{r} 
 kable(pubs_tbl[1:9, ],
+      longtable = FALSE,
       col.names = NULL)
 ```
 
@@ -575,7 +586,9 @@ reports_tbl <- reports_tbl %>%
 
 ```{r} 
 kable(reports_tbl[1:9, ],
+      longtable = FALSE,
       col.names = NULL)
+
 ```
 
 
@@ -645,6 +658,7 @@ conf_tbl <- conf_tbl %>%
 
 ```{r}
 kable(conf_tbl[1:7, ],
+      longtable = FALSE,
       col.names = NULL)
 ```
 
@@ -685,5 +699,5 @@ cv_entries %>%
                        )
         ) %>%
   select(count, cite) %>%
-  kable()
+  kable(longtable = FALSE)
 ```
