--- a/content/contact-info.Rmd
+++ b/content/contact-info.Rmd
@@ -5,8 +5,7 @@
 | right | right |
 |:------|-----:|
 | <span style="color: #454545"><i class="fas fa-envelope"></i></span> jjwright90\@gmail.com |
-| <span style="color: #454545"><i class="fas fa-envelope"></i></span> jim.wright@marzanoresearch.com |
-| <span style="color: #454545"><i class="fas fa-envelope"></i></span> jwrigh16\@uoregon.edu |
+| <span style="color: #454545"><i class="fas fa-envelope"></i></span> jim@appliedsurveyresearch.org |
 | <span style="color: #454545"><i class="fab fa-github"></i></span> [Jim-Wright90](https://github.com/Jim-Wright90) |
 | <span style="color: #454545"><i class="fab fa-linkedin"></i></span> [Jim Wright](https://www.linkedin.com/in/jim-wright-a944698b/) |
 | <span style="color: #454545"><i class="fab fa-orcid"></i></span> [Jim Wright](https://orcid.org/my-orcid?orcid=0000-0003-3035-7003) |
